--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,6 @@ edition = "2021"
 [dependencies]
 colored = "2.0.0"
 rust-bert = "0.20.0"
+serde = "1.0.152"
+serde_json = "1.0.93"
 tokenizers = "0.13.2"
