minor changes and fixes

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -21,7 +21,7 @@
                 }
             },
             "env": {
-                "RUST_ONNXRUNTIME_LIBRARY_PATH": "/usr/local/lib/onnx/libonnxruntime_session.a"
+                "RUST_ONNXRUNTIME_LIBRARY_PATH": "/usr/local/lib/onnx/libonnxruntime.so"
             },
             "args": [],
             "cwd": "${workspaceFolder}"
@@ -42,7 +42,7 @@
                 }
             },
             "env": {
-                "RUST_ONNXRUNTIME_LIBRARY_PATH": "/usr/local/lib/onnx/libonnxruntime_session.a"
+                "RUST_ONNXRUNTIME_LIBRARY_PATH": "/usr/local/lib/onnx/libonnxruntime.so"
             },
             "args": [],
             "cwd": "${workspaceFolder}"
@@ -64,7 +64,7 @@
                 }
             },
             "env": {
-                "RUST_ONNXRUNTIME_LIBRARY_PATH": "/usr/local/lib/onnx/libonnxruntime_session.a"
+                "RUST_ONNXRUNTIME_LIBRARY_PATH": "/usr/local/lib/onnx/libonnxruntime.so"
             },
             "args": [],
             "cwd": "${workspaceFolder}"
